# supabase-client-rs

./: Cargo.toml  LICENSE-MIT  README.md
examples/: basic.rs  query.rs  realtime.rs
src/: client.rs  config.rs  error.rs  lib.rs  traits.rs
