[package]
name = "supabase-client-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Scaraude"]
description = "A unified Rust client for Supabase with database, realtime, auth, storage, and functions support"
license = "MIT"
repository = "https://github.com/Scaraude/supabase-client-rs"
homepage = "https://github.com/Scaraude/supabase-client-rs"
documentation = "https://docs.rs/supabase-client-rs"
keywords = ["supabase", "postgres", "realtime", "database", "api"]
categories = ["api-bindings", "database", "web-programming"]
readme = "README.md"

[dependencies]
# Core
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"

# Supabase ecosystem
postgrest = "1"
supabase-realtime-rs = { version = "0.1.2", optional = true }

# Utilities
tracing = "0.1"
once_cell = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
chrono = "0.4"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]
realtime = ["supabase-realtime-rs"]

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "query"
path = "examples/query.rs"

[[example]]
name = "realtime"
path = "examples/realtime.rs"
required-features = ["realtime"]
